Text file writing

--- a/README
+++ b/README
@@ -4,3 +4,4 @@ This project is an Open-Source and Free (GPL).
 ~~~~~~~~~~~~~
 Open-Source Free viewer for Stereo-Photos on Zalman 3D Display.
 Now it can view JPS and MPO files.
+Now it is a portable application for MS Windows(tm).
